bindings/c/whiteout_host.h

/* SPDX-License-Identifier: BSD-3-Clause */
/* Copyright (c) 2026 Fernando Sahmkow */
/* AUTOGENERATED by tools/codegen/emit_c.py — do not edit. */
/* Regenerate via:  python -m tools.codegen.codegen host --backend c-header */

#ifndef WHITEOUT_HOST_H
#define WHITEOUT_HOST_H

#include "whiteout_c_common.h"

#ifdef __cplusplus
extern "C" {
#endif

/* ── Enums ─────────────────────────────────────────────────── */

typedef enum {
    whiteout_host_BlizzardGame_Unknown,
    whiteout_host_BlizzardGame_WorldOfWarcraft,
    whiteout_host_BlizzardGame_WorldOfWarcraftClassic,
    whiteout_host_BlizzardGame_WorldOfWarcraftClassicEra,
    whiteout_host_BlizzardGame_WarcraftIIBattleNetEdition,
    whiteout_host_BlizzardGame_WarcraftIIRemastered,
    whiteout_host_BlizzardGame_WarcraftIII,
    whiteout_host_BlizzardGame_WarcraftIIIReforged,
    whiteout_host_BlizzardGame_StarCraft,
    whiteout_host_BlizzardGame_StarCraftRemastered,
    whiteout_host_BlizzardGame_StarCraftII,
    whiteout_host_BlizzardGame_Diablo,
    whiteout_host_BlizzardGame_DiabloII,
    whiteout_host_BlizzardGame_DiabloIIResurrected,
    whiteout_host_BlizzardGame_DiabloIII,
    whiteout_host_BlizzardGame_DiabloIV,
    whiteout_host_BlizzardGame_DiabloImmortal,
    whiteout_host_BlizzardGame_HeroesOfTheStorm,
    whiteout_host_BlizzardGame_Overwatch2,
    whiteout_host_BlizzardGame_Hearthstone,
    whiteout_host_BlizzardGame_BlizzardArcadeCollection,
    whiteout_host_BlizzardGame_BattleNet,
} whiteout_host_BlizzardGame;

/* ── Opaque handles ───────────────────────────────────────── */

typedef struct whiteout_WorkerPool whiteout_WorkerPool;
typedef struct whiteout_CascFileSystem whiteout_CascFileSystem;
typedef struct whiteout_VirtualPathFileSystem whiteout_VirtualPathFileSystem;
typedef struct whiteout_HttpResponse whiteout_HttpResponse;
typedef struct whiteout_HttpHandler whiteout_HttpHandler;
typedef struct whiteout_OsFileSystem whiteout_OsFileSystem;
typedef struct whiteout_SimpleThreadPool whiteout_SimpleThreadPool;
typedef struct whiteout_SimpleHttpHandler whiteout_SimpleHttpHandler;
typedef struct whiteout_JobGroup whiteout_JobGroup;
typedef struct whiteout_BlizzardGameInfo whiteout_BlizzardGameInfo;
typedef struct whiteout_BlizzardGameInfoList whiteout_BlizzardGameInfoList;
typedef struct whiteout_BlizzardGameFinder whiteout_BlizzardGameFinder;

/* ── WorkerPool ─────────────────────────────────────────────── */

/* java_package=whiteout.utils — abstract opaque base. Concrete impl: utils::SimpleThreadPool. */
void whiteout_host_WorkerPool_delete(whiteout_WorkerPool* self);

/* Block until every submitted task has completed. */
void whiteout_host_WorkerPool_waitIdle(whiteout_WorkerPool* self);
/* Number of worker threads in this pool. */
uint64_t whiteout_host_WorkerPool_threadCount(const whiteout_WorkerPool* self);

/* ── CascFileSystem ─────────────────────────────────────────────── */

/* java_package=whiteout.utils — abstract file system that resolves files by numeric data ID (e.g. CASC). */
void whiteout_host_CascFileSystem_delete(whiteout_CascFileSystem* self);

/* Read the entire contents of a file by its numeric data ID. */
whiteout_Bytes whiteout_host_CascFileSystem_readFile(const whiteout_CascFileSystem* self, uint32_t fileId);
/* Resolve a path to a numeric file ID (nullable). */
int32_t whiteout_host_CascFileSystem_reserveFileId(whiteout_CascFileSystem* self, const char* path, uint32_t* out_value);
/* Write a file by its numeric data ID. Returns true on success. */
int32_t whiteout_host_CascFileSystem_writeFile(whiteout_CascFileSystem* self, uint32_t fileId, const uint8_t* data, size_t data_size);
/* Check if a file with the given data ID exists. */
int32_t whiteout_host_CascFileSystem_fileExists(const whiteout_CascFileSystem* self, uint32_t fileId);

/* ── VirtualPathFileSystem ─────────────────────────────────────────────── */

/* java_package=whiteout.utils — abstract base. Concrete impl: utils::OsFileSystem. */
void whiteout_host_VirtualPathFileSystem_delete(whiteout_VirtualPathFileSystem* self);

/* Read the entire contents of a file into a byte vector. */
whiteout_Bytes whiteout_host_VirtualPathFileSystem_readFile(const whiteout_VirtualPathFileSystem* self, const char* path);
/* Write a file. Returns true on success. */
int32_t whiteout_host_VirtualPathFileSystem_writeFile(whiteout_VirtualPathFileSystem* self, const char* path, const uint8_t* data, size_t data_size);
/* Check if a file exists at the given path. */
int32_t whiteout_host_VirtualPathFileSystem_fileExists(const whiteout_VirtualPathFileSystem* self, const char* path);

/* ── HttpResponse ─────────────────────────────────────────────── */

/* HTTP GET result handed to user callbacks. */
whiteout_HttpResponse* whiteout_host_HttpResponse_new(void);
void whiteout_host_HttpResponse_delete(whiteout_HttpResponse* self);

/* HTTP status code (200, 206, 404, …). */
int32_t whiteout_host_HttpResponse_get_statusCode(const whiteout_HttpResponse* self);
void whiteout_host_HttpResponse_set_statusCode(whiteout_HttpResponse* self, int32_t value);
/* Response body. */
size_t whiteout_host_HttpResponse_get_body_count(const whiteout_HttpResponse* self);
void whiteout_host_HttpResponse_resize_body(whiteout_HttpResponse* self, size_t count);
const uint8_t* whiteout_host_HttpResponse_get_body_data(const whiteout_HttpResponse* self);
void whiteout_host_HttpResponse_assign_body(whiteout_HttpResponse* self, const uint8_t* data, size_t count);
/* Transport-level error (empty on success). */
whiteout_CString whiteout_host_HttpResponse_get_error(const whiteout_HttpResponse* self);
void whiteout_host_HttpResponse_set_error(whiteout_HttpResponse* self, const char* value);

/* ── HttpHandler ─────────────────────────────────────────────── */

/* Abstract HTTP handler.  The library calls these methods to fetch CDN data. Users must provide a concrete implementation. */
/*  */
/* Both methods are pure virtual — async support is mandatory. The handler invokes @p callback exactly once when the request completes (or fails). The callback may be invoked from any thread. */
/*  */
/* Thread safety: methods may be called concurrently from multiple WorkerPool threads.  The implementation must be thread-safe. */
/*  */
/* java_package=whiteout.utils — abstract opaque base. Concrete impl: utils::SimpleHttpHandler. */
void whiteout_host_HttpHandler_delete(whiteout_HttpHandler* self);

/* Reported handler capability flags. */
uint32_t whiteout_host_HttpHandler_capabilities(const whiteout_HttpHandler* self);

/* ── OsFileSystem ─────────────────────────────────────────────── */

/* VirtualPathFileSystem implementation backed by the OS filesystem. */
/*  */
/* All paths passed to readFile() / fileExists() are resolved relative to the root directory supplied at construction time. */
/*  */
/* Example: utils::OsFileSystem fs("C:/Games/Warcraft III/Data"); auto data = fs.readFile("units/human/arthas/arthas.mdx"); */
/*  */
/* java_package=whiteout.utils */
whiteout_OsFileSystem* whiteout_host_OsFileSystem_new_rootPath(const char* rootPath);
void whiteout_host_OsFileSystem_delete(whiteout_OsFileSystem* self);

/* Read a file at `rootPath / path`. Returns an empty vector if not found. */
whiteout_Bytes whiteout_host_OsFileSystem_readFile(const whiteout_OsFileSystem* self, const char* path);
int32_t whiteout_host_OsFileSystem_writeFile(whiteout_OsFileSystem* self, const char* path, const uint8_t* data, size_t data_size);
int32_t whiteout_host_OsFileSystem_fileExists(const whiteout_OsFileSystem* self, const char* path);

/* ── SimpleThreadPool ─────────────────────────────────────────────── */

/* Basic CPU worker pool implementation of interfaces::WorkerPool. */
/*  */
/* Tasks are executed by a fixed number of worker threads created at construction time. */
whiteout_SimpleThreadPool* whiteout_host_SimpleThreadPool_new_nThreads(uint64_t nThreads);
void whiteout_host_SimpleThreadPool_delete(whiteout_SimpleThreadPool* self);

/* Block until the pool has no pending or running tasks. */
void whiteout_host_SimpleThreadPool_waitIdle(whiteout_SimpleThreadPool* self);
/* Number of worker threads in this pool. */
uint64_t whiteout_host_SimpleThreadPool_threadCount(const whiteout_SimpleThreadPool* self);

/* ── SimpleHttpHandler ─────────────────────────────────────────────── */

/* Basic HTTP handler with two platform backends: * Windows  — WinHTTP * Other    — libcurl (linked at build time) */
/*  */
/* Requests are dispatched asynchronously onto an internal thread pool; each worker owns one backend handle and keeps its connection cache warm. Thread-safe: multiple threads may call getAsync / getRangeAsync concurrently. */
whiteout_SimpleHttpHandler* whiteout_host_SimpleHttpHandler_new(void);
whiteout_SimpleHttpHandler* whiteout_host_SimpleHttpHandler_new_nThreads(uint64_t nThreads);
void whiteout_host_SimpleHttpHandler_delete(whiteout_SimpleHttpHandler* self);

/* Reported handler capability flags. */
uint32_t whiteout_host_SimpleHttpHandler_capabilities(const whiteout_SimpleHttpHandler* self);

/* ── JobGroup ─────────────────────────────────────────────── */

/* Thread-safe counter-based completion primitive for grouped jobs. */
/*  */
/* A JobGroup starts with zero pending jobs. Call add() before submitting work, then call done() once per completed job. wait() blocks until the pending count reaches zero. */
/*  */
/* Typical usage pattern: 1. add(N) 2. submit N tasks 3. each task calls done() on completion 4. wait() to join the group */
whiteout_JobGroup* whiteout_host_JobGroup_new(void);
void whiteout_host_JobGroup_delete(whiteout_JobGroup* self);

/* Increment the number of pending jobs. */
/*  */
/* @param n Number of jobs to add to the group. */
void whiteout_host_JobGroup_add(whiteout_JobGroup* self, uint64_t n);
/* Mark one pending job as completed. */
/*  */
/* When the pending count reaches zero, all waiters are notified. */
/*  */
/* @note done() calls must be balanced with prior add() calls. */
void whiteout_host_JobGroup_done(whiteout_JobGroup* self);
/* Java's Object.wait() is final so the generated wrapper would fail to compile; expose as await(). Block until all pending jobs in the group are completed. */
void whiteout_host_JobGroup_await(whiteout_JobGroup* self);
/* Check whether the group has no pending jobs. */
/*  */
/* @return true if pending count is zero, false otherwise. */
int32_t whiteout_host_JobGroup_isReady(const whiteout_JobGroup* self);

/* ── BlizzardGameInfo ─────────────────────────────────────────────── */

/* Result entry from findBlizzardGames(). */
whiteout_BlizzardGameInfo* whiteout_host_BlizzardGameInfo_new(void);
void whiteout_host_BlizzardGameInfo_delete(whiteout_BlizzardGameInfo* self);

/* Identified game. `Unknown` if not recognized. */
int32_t whiteout_host_BlizzardGameInfo_get_game(const whiteout_BlizzardGameInfo* self);
void whiteout_host_BlizzardGameInfo_set_game(whiteout_BlizzardGameInfo* self, int32_t value);
/* Human-readable display name. */
whiteout_CString whiteout_host_BlizzardGameInfo_get_name(const whiteout_BlizzardGameInfo* self);
void whiteout_host_BlizzardGameInfo_set_name(whiteout_BlizzardGameInfo* self, const char* value);
/* Install directory path. */
whiteout_CString whiteout_host_BlizzardGameInfo_get_path(const whiteout_BlizzardGameInfo* self);
void whiteout_host_BlizzardGameInfo_set_path(whiteout_BlizzardGameInfo* self, const char* value);

/* ── BlizzardGameInfoList ─────────────────────────────────────────────── */

/* Opaque handle around `std::vector<BlizzardGameInfo>` returned by `BlizzardGameFinder::findAll()`. Iterate via size() + at(index). */
void whiteout_host_BlizzardGameInfoList_delete(whiteout_BlizzardGameInfoList* self);

/* Number of game entries in the list. */
uint64_t whiteout_host_BlizzardGameInfoList_size(const whiteout_BlizzardGameInfoList* self);
/* Borrowed reference to entry at @p index. Valid until this list is destroyed. */
struct whiteout_BlizzardGameInfo* whiteout_host_BlizzardGameInfoList_at(const whiteout_BlizzardGameInfoList* self, uint64_t index);

/* ── BlizzardGameFinder ─────────────────────────────────────────────── */

/* Static-method facade around the free functions above so they bind through the class-method codegen path. */
void whiteout_host_BlizzardGameFinder_delete(whiteout_BlizzardGameFinder* self);

/* Discover installed Blizzard games. See `findBlizzardGames()`. */
struct whiteout_BlizzardGameInfoList* whiteout_host_BlizzardGameFinder_findAll(void);
/* Map a display name to a BlizzardGame enum. See `blizzardGameFromName()`. */
int32_t whiteout_host_BlizzardGameFinder_fromName(const char* name);
/* Get the canonical display name for a known game. See `blizzardGameToName()`. Returns empty string for Unknown. */
whiteout_CString whiteout_host_BlizzardGameFinder_toName(int32_t game);


#ifdef __cplusplus
} /* extern "C" */
#endif

#endif /* WHITEOUT_HOST_H */