bindings/csharp/Whiteout/Host/NativeMethods.Host.cs

// SPDX-License-Identifier: BSD-3-Clause
// Copyright (c) 2026 Fernando Sahmkow
// AUTOGENERATED by tools/codegen/emit_csharp.py — DO NOT EDIT.

using System.Runtime.InteropServices;

namespace Whiteout.Host.Internal;

internal static partial class NativeMethods
{
    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_host_WorkerPool_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_host_WorkerPool_waitIdle(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ulong whiteout_host_WorkerPool_threadCount(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_host_CascFileSystem_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeBytes whiteout_host_CascFileSystem_readFile(IntPtr self, uint fileId);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_host_CascFileSystem_reserveFileId(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string path, out uint out_value);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_host_CascFileSystem_writeFile(IntPtr self, uint fileId, ReadOnlySpan<byte> data, nuint data_size);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_host_CascFileSystem_fileExists(IntPtr self, uint fileId);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_host_VirtualPathFileSystem_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeBytes whiteout_host_VirtualPathFileSystem_readFile(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_host_VirtualPathFileSystem_writeFile(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string path, ReadOnlySpan<byte> data, nuint data_size);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_host_VirtualPathFileSystem_fileExists(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_host_HttpResponse_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_host_HttpResponse_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_host_HttpResponse_get_statusCode(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_host_HttpResponse_set_statusCode(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_host_HttpResponse_get_error(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_host_HttpResponse_set_error(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_host_HttpHandler_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_host_HttpHandler_capabilities(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_host_OsFileSystem_new_rootPath([MarshalAs(UnmanagedType.LPUTF8Str)] string rootPath);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_host_OsFileSystem_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeBytes whiteout_host_OsFileSystem_readFile(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_host_OsFileSystem_writeFile(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string path, ReadOnlySpan<byte> data, nuint data_size);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_host_OsFileSystem_fileExists(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_host_SimpleThreadPool_new_nThreads(ulong nThreads);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_host_SimpleThreadPool_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_host_SimpleThreadPool_waitIdle(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ulong whiteout_host_SimpleThreadPool_threadCount(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_host_SimpleHttpHandler_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_host_SimpleHttpHandler_new_nThreads(ulong nThreads);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_host_SimpleHttpHandler_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_host_SimpleHttpHandler_capabilities(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_host_JobGroup_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_host_JobGroup_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_host_JobGroup_add(IntPtr self, ulong n);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_host_JobGroup_done(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_host_JobGroup_await(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_host_JobGroup_isReady(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_host_BlizzardGameInfo_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_host_BlizzardGameInfo_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_host_BlizzardGameInfo_get_game(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_host_BlizzardGameInfo_set_game(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_host_BlizzardGameInfo_get_name(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_host_BlizzardGameInfo_set_name(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_host_BlizzardGameInfo_get_path(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_host_BlizzardGameInfo_set_path(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_host_BlizzardGameInfoList_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial ulong whiteout_host_BlizzardGameInfoList_size(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_host_BlizzardGameInfoList_at(IntPtr self, ulong index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_host_BlizzardGameFinder_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_host_BlizzardGameFinder_findAll();


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_host_BlizzardGameFinder_fromName([MarshalAs(UnmanagedType.LPUTF8Str)] string name);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_host_BlizzardGameFinder_toName(int game);

}
